--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ description = "Genuine makes it easy to create test data and associations."
 license = "BSD-3-Clause"
 authors = ["Xavier Barbosa <clint.northwood@gmail.com>"]
 readme = "README.md"
+homepage = "https://johnnoone.github.io/genuine/"
+repository = "https://github.com/johnnoone/genuine"
 keywords = ["test", "fixtures"]
 classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
