--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ mkdocstrings = { extras = ["python"], version = "^0.23.0" }
 mkdocs-autorefs = "^0.5.0"
 griffe-typingdoc = "^0.2.2"
 
+[tool.poetry.plugins."pytest_randomly.random_seeder"]
+mimesis = "genuine.random:reseed"
+
 [tool.pytest.ini_options]
 addopts = "--cov genuine --cov-branch --cov-report term-missing"
 
